--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--=== main css ===-->
     <link rel="stylesheet" href="css/tailwind.css" />
     <link rel="stylesheet" href="css/custom.css" />
-    <title>Farhan Shoffi - Life is Short, Akhirah is Eternal</title>
+    <title>Farhan Shoffis - Life is Short, Akhirah is Eternal</title>
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("color-theme") === "dark" || (!("color-theme" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
